# toolkit

./: .gitignore  CMakeLists.txt  CMakePackaging.txt  CMakePresets.json  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
3d/anim_builder/: CMakeLists.txt  anim_builder.cpp  anim_builder.h
3d/animation_set_builder/: CMakeLists.txt  anim_utility.cpp  anim_utility.h  animation_set_builder.cpp
3d/build_clod_bank/: CMakeLists.txt  build_clod_bank.cpp
3d/build_clodtex/: CMakeLists.txt  lod_texture_builder.cpp  lod_texture_builder.h  main.cpp
3d/build_coarse_mesh/: CMakeLists.txt  build_coarse_mesh.cpp
3d/build_far_bank/: CMakeLists.txt  build_far_bank.cpp
3d/build_interface/: CMakeLists.txt  main.cpp
3d/build_shadow_skin/: CMakeLists.txt  main.cpp
3d/build_smallbank/: CMakeLists.txt  build_smallbank.cpp
3d/cluster_viewer/: CMakeLists.txt  view_cs.cpp
3d/crash_log_analyser/: main.cpp
3d/file_info/: CMakeLists.txt  main.cpp
3d/get_neighbors/: CMakeLists.txt  main.cpp
3d/hls_bank_maker/: CMakeLists.txt  hls_bank_maker.cpp  hls_bank_maker.h
3d/ig_add/: CMakeLists.txt  main.cpp
3d/ig_elevation/: CMakeLists.txt  main.cpp
3d/ig_info/: CMakeLists.txt  ig_info.cpp
3d/ig_lighter/: CMakeLists.txt  ig_lighter.cpp
3d/ig_lighter_lib/: ig_lighter_lib.cpp  ig_lighter_lib.h
3d/lightmap_optimizer/: CMakeLists.txt  main.cpp
3d/mesh_export/: CMakeLists.txt  main.cpp
3d/mesh_utils/: assimp_material.cpp  assimp_material.h  assimp_shape.cpp  mesh_utils.cpp  scene_context.cpp  scene_context.h  scene_meta.cpp  scene_meta.h
3d/object_viewer/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  animation_dlg.cpp  animation_dlg.h  animation_set_dlg.cpp  animation_set_dlg.h  attrib_dlg.cpp  attrib_dlg.h  attrib_list_box.cpp  attrib_list_box.h  auto_lod_dlg.cpp  auto_lod_dlg.h  basis_edit.cpp  basis_edit.h  bin_op_dlg.cpp  bin_op_dlg.h  blend_wnd.cpp  blend_wnd.h  bound_checker.h  choose_bg_color_dlg.cpp  choose_bg_color_dlg.h  choose_frame_delay.cpp  choose_frame_delay.h  choose_name.cpp  choose_name.h  choose_pool_id.cpp  choose_pool_id.h  choose_sun_color_dlg.cpp  choose_sun_color_dlg.h  collision_zone_dlg.cpp  collision_zone_dlg.h  color_button.cpp  color_button.h  color_edit.cpp  color_edit.h  color_static.cpp  color_static.h  constraint_mesh_dlg.cpp  constraint_mesh_dlg.h  (+168 more)
3d/object_viewer_exe/: CMakeLists.txt  object_viewer_exe.cpp  object_viewer_exe.rc  resource.h  std_afx.h
3d/panoply_maker/: CMakeLists.txt  color_mask.h  color_modifier.cpp  color_modifier.h  hls_bank_texture_info.cpp  hls_bank_texture_info.h  panoply_maker.cpp
3d/panoply_preview/: CMakeLists.txt  main_window.cpp  main_window.h  panoply_preview.cpp  panoply_preview.h  tool_config.h  tool_main.cpp  tool_main.h
3d/pipeline_max/: class_data.cpp  class_data.h  class_directory_3.cpp  class_directory_3.h  config.cpp  config.h  derived_object.cpp  derived_object.h  dll_directory.cpp  dll_directory.h  dll_plugin_desc.cpp  scene.cpp  scene.h  scene_class.cpp  scene_class.h  scene_class_registry.cpp  scene_class_registry.h  scene_class_unknown.cpp  scene_class_unknown.h  storage_array.cpp  storage_array.h  storage_chunks.cpp  storage_chunks.h  storage_file.cpp  storage_file.h  storage_object.cpp  storage_object.h  storage_stream.cpp  storage_stream.h  storage_value.cpp  storage_value.h  super_class_desc.cpp  super_class_desc.h  typedefs.cpp  wsm_derived_object.cpp  wsm_derived_object.h
3d/pipeline_max_dump/: CMakeLists.txt  class_directory_3_2010.c  class_directory_3_3.c  config_2010.c  config_3.c  main.cpp  scene_2010.c
3d/pipeline_max_rewrite_assets/: CMakeLists.txt  main.cpp
3d/s3tc_compressor_lib/: s3tc_compressor.cpp  s3tc_compressor.h
3d/shape2obj/: CMakeLists.txt  main.cpp
3d/shapes_exporter/: CMakeLists.txt  main.cpp  shapes_exporter.cpp  shapes_exporter.h
3d/shared_widgets/: command_log.cpp  command_log.h  common.h
3d/textures_optimizer/: CMakeLists.txt  main.cpp
3d/textures_tool/: CMakeLists.txt  main.cpp
3d/tga_2_dds/: CMakeLists.txt  tga2dds.cpp
3d/tga_cut/: CMakeLists.txt  tga_cut.cpp
3d/tga_resize/: CMakeLists.txt  main.cpp
3d/tile_edit/: Browse.cpp  Browse.h  CMakeLists.txt  DialogEditList.cpp  DialogEditList.h  DllEntry.cpp  (+31 more)
3d/unbuild_elevation/: CMakeLists.txt  unbuild_elevation.cpp
3d/unbuild_interface/: CMakeLists.txt  unbuild_interface.cpp
3d/zone_dump/: CMakeLists.txt  zone_dump.cpp
3d/zone_ig_lighter/: CMakeLists.txt  zone_ig_lighter.cpp
3d/zone_lighter/: CMakeLists.txt  zone_lighter.cpp
CMakeModules/: ConfigureChecks.cmake  Find3dsMaxSDK.cmake  FindFMOD.cmake  FindHelpers.cmake  FindMSVC.cmake  FindSTLport.cmake  FindWindowsSDK.cmake  GetRevision.cmake  OSXToolChain.cmake  nel.cmake
htmlcss_test/: htmlcss_test.cpp
ligo/unbuild_flora/: CMakeLists.txt  unbuild_flora.cpp
ligo/unbuild_land/: CMakeLists.txt  unbuild_land.cpp
memory/memlog/: CMakeLists.txt  memlog.cpp
misc/bnp_make/: CMakeLists.txt  main.cpp
misc/branch_patcher/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  branch_patcher.cpp  branch_patcher.h  branch_patcher.rc  branch_patcherDlg.cpp  branch_patcherDlg.h  resource.h
misc/data_mirror/: CMakeLists.txt  Resource.h  StdAfx.cpp  StdAfx.h  config.cfg  data_mirror.cpp  data_mirror.h  data_mirror.rc  data_mirrorDlg.cpp  data_mirrorDlg.h  my_list_ctrl.cpp  my_list_ctrl.h  progress_dialog.cpp  progress_dialog.h
misc/exec_timeout/: CMakeLists.txt  exec_timeout.cpp
misc/extract_filename/: CMakeLists.txt  extract_filename.cpp
misc/lock/: CMakeLists.txt  lock.cpp
misc/make_sheet_id/: CMakeLists.txt  make_sheet_id.cpp
misc/message_box/: CMakeLists.txt  message_box.cpp  message_box.h
nel_unit_test/: CMakeLists.txt  nel_unit_test.cpp  ut_ligo_primitive.h  ut_misc.h  ut_misc_base64.h  ut_misc_co_task.h  ut_misc_command.h  ut_misc_common.h  ut_misc_config_file.test.cpp  ut_misc_debug.h  ut_misc_dynlibload.h  ut_misc_file.h  ut_misc_pack_file.h  ut_misc_singleton.h  ut_misc_sstring.h  ut_misc_stream.h  ut_misc_types.h  ut_misc_variable.h  ut_net.h  ut_net_address.h  ut_net_layer3.h  ut_net_message.h  ut_net_module.h
(+449 files in other folders)
