FILE(GLOB SRC *.cpp *.h *.rc)

SOURCE_GROUP("" FILES ${SRC})

ADD_EXECUTABLE(ig_add ${SRC})

TARGET_LINK_LIBRARIES(ig_add nel3d nelmisc)
NL_DEFAULT_PROPS(ig_add "NeL, Tools, 3D: ig_add")
NL_ADD_RUNTIME_FLAGS(ig_add)


SET_TARGET_PROPERTIES(ig_add PROPERTIES
  INSTALL_RPATH "$ORIGIN/lib:$ORIGIN/../lib"
  BUILD_RPATH   "$ORIGIN/lib:$ORIGIN/../lib")

INSTALL(TARGETS ig_add RUNTIME DESTINATION ${NL_BIN_PREFIX} COMPONENT tools3d)
