FILE(GLOB SRC *.cpp *.h *.rc *.rc2)

SOURCE_GROUP("" FILES ${SRC})

ADD_EXECUTABLE(data_mirror WIN32 ${SRC})

TARGET_LINK_LIBRARIES(data_mirror nelmisc)
NL_DEFAULT_PROPS(data_mirror "NeL, Tools, Misc: data_mirror")
NL_ADD_RUNTIME_FLAGS(data_mirror)

ADD_DEFINITIONS(${MFC_DEFINITIONS})

SET_TARGET_PROPERTIES(data_mirror PROPERTIES
  INSTALL_RPATH "$ORIGIN/lib:$ORIGIN/../lib"
  BUILD_RPATH   "$ORIGIN/lib:$ORIGIN/../lib")

INSTALL(TARGETS data_mirror RUNTIME DESTINATION ${NL_BIN_PREFIX} COMPONENT toolsmisc)
