FILE(GLOB SRC *.cpp *.h)

ADD_EXECUTABLE(lock ${SRC})

TARGET_LINK_LIBRARIES(lock nelmisc)
NL_DEFAULT_PROPS(lock "NeL, Tools, Misc: lock")
NL_ADD_RUNTIME_FLAGS(lock)

SET_TARGET_PROPERTIES(lock PROPERTIES
  INSTALL_RPATH "$ORIGIN/lib:$ORIGIN/../lib"
  BUILD_RPATH   "$ORIGIN/lib:$ORIGIN/../lib")

INSTALL(TARGETS lock RUNTIME DESTINATION ${NL_BIN_PREFIX} COMPONENT toolsmisc)
